WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199737
window.openDatabase is not writable
https://bugs.webkit.org/show_bug.cgi?id=199737
Summary
window.openDatabase is not writable
Sihui Liu
Reported
2019-07-11 17:08:23 PDT
...
Attachments
Patch
(4.94 KB, patch)
2019-07-11 17:13 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.94 KB, patch)
2019-07-12 11:40 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.28 KB, patch)
2019-07-12 16:44 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.31 KB, patch)
2019-07-12 16:46 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.18 KB, patch)
2019-07-15 09:34 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-07-11 17:09:01 PDT
<
rdar://problem/52551332
>
Sihui Liu
Comment 2
2019-07-11 17:13:41 PDT
Created
attachment 373977
[details]
Patch
Chris Dumez
Comment 3
2019-07-12 10:21:16 PDT
Comment on
attachment 373977
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373977&action=review
r=me
> Tools/TestWebKitAPI/Tests/WebKitCocoa/opendatabase-always-exists.html:18 > + if (window.openDatabase == func) {
===
Sihui Liu
Comment 4
2019-07-12 11:40:35 PDT
Created
attachment 374025
[details]
Patch for landing
Sam Weinig
Comment 5
2019-07-12 14:52:01 PDT
Comment on
attachment 374025
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=374025&action=review
> Source/WebCore/ChangeLog:13 > + Modified API test: WebSQL.OpenDatabaseAlwaysExists > + > + * Modules/webdatabase/DOMWindowWebDatabase.idl: > + * bindings/js/JSDOMWindowCustom.cpp: > + (WebCore::JSDOMWindow::setOpenDatabase):
This really needs an explanation. Please do try to explain what the change is doing and why in the ChangeLog.
Sihui Liu
Comment 6
2019-07-12 16:44:05 PDT
Created
attachment 374053
[details]
Patch for landing
Sihui Liu
Comment 7
2019-07-12 16:46:48 PDT
Created
attachment 374054
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2019-07-12 16:50:29 PDT
Comment on
attachment 374054
[details]
Patch for landing Rejecting
attachment 374054
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 374054, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/12728934
Sihui Liu
Comment 9
2019-07-15 09:34:46 PDT
Created
attachment 374116
[details]
Patch for landing
WebKit Commit Bot
Comment 10
2019-07-15 10:17:59 PDT
Comment on
attachment 374116
[details]
Patch for landing Clearing flags on attachment: 374116 Committed
r247434
: <
https://trac.webkit.org/changeset/247434
>
WebKit Commit Bot
Comment 11
2019-07-15 10:18:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug